# project-2_Zamanov_m25-555

./: .gitignore  Makefile  pyproject.toml
src/primitive_db/: core.py  engine.py  main.py  parser.py  utils.py
