[tool.poetry]
name = "project-2-zamanov-m25-555"
version = "0.1.0"
description = ""
authors = ["Аноним НОУНЕЙМОВИЧ <midnight01327@yandex.ru>"]
packages = [{include = "primitive_db", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
prompt = "^0.4.1"
prettytable = "^3.17.0"

[tool.poetry.scripts]
database = "primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"  